--- a/src/GridManager/GridManager.csproj
+++ b/src/GridManager/GridManager.csproj
@@ -38,11 +38,12 @@
   <Import Project="MDK/MDK.options.props" />
   <Import Project="MDK/MDK.paths.props" Condition="exists('MDK/MDK.paths.props')" />
   <ItemGroup>
+    <Compile Include="CustomData\CustomDataManager.cs" />
+    <Compile Include="CustomData\CustomDataSettings.cs" />
     <Compile Include="Display\DisplayManager.cs" />
     <Compile Include="Display\Surface.cs" />
     <Compile Include="Display\SurfaceByType.cs" />
     <Compile Include="Item.cs" />
-    <Compile Include="CustomDataManager.cs" />
     <Compile Include="MenuNavigation\Menu.cs" />
     <Compile Include="MenuNavigation\MenuCore.cs" />
     <Compile Include="MenuNavigation\MenuItem.cs" />
