--- a/src/GridManager/GridManager.csproj
+++ b/src/GridManager/GridManager.csproj
@@ -38,6 +38,7 @@
   <Import Project="MDK/MDK.options.props" />
   <Import Project="MDK/MDK.paths.props" Condition="exists('MDK/MDK.paths.props')" />
   <ItemGroup>
+    <Compile Include="Cleanup\AutoCleanup.cs" />
     <Compile Include="CustomData\CustomDataManager.cs" />
     <Compile Include="CustomData\CustomDataSettings.cs" />
     <Compile Include="Display\DisplayManager.cs" />
