--- a/src/GridManager/GridManager.csproj
+++ b/src/GridManager/GridManager.csproj
@@ -49,6 +49,7 @@
     <Compile Include="MenuNavigation\MenuCore.cs" />
     <Compile Include="MenuNavigation\MenuItem.cs" />
     <Compile Include="MenuNavigation\MenuNavigationSystem.cs" />
+    <Compile Include="Monitoring\BatteryInfo.cs" />
     <Compile Include="Monitoring\GridMonitoring.cs" />
     <Compile Include="MDK\Bootstrapper.cs" />
     <AdditionalFiles Include="MDK\MDK.options.props">
