--- a/src/MyGridAssistant/MyGridAssistant.csproj
+++ b/src/MyGridAssistant/MyGridAssistant.csproj
@@ -2,29 +2,30 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net462</TargetFramework>
+        <LangVersion>6</LangVersion>
         <AssemblyName>SpaceEngineers.MyGridAssisstant</AssemblyName>
         <RootNamespace>SpaceEngineers.MyGridAssisstant</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <Reference Include="Sandbox.Common">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Common.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Common.dll</HintPath>
         </Reference>
         <Reference Include="Sandbox.Game">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Game.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\Sandbox.Game.dll</HintPath>
         </Reference>
         <Reference Include="SpaceEngineers.Game">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
         </Reference>
         <Reference Include="VRage.Game">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
         </Reference>
         <Reference Include="VRage.Library">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Library.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Library.dll</HintPath>
         </Reference>
         <Reference Include="VRage.Math">
-            <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Math.dll</HintPath>
+            <HintPath>C:\Program Files (x86)\Steam\steamapps\common\SpaceEngineers\Bin64\VRage.Math.dll</HintPath>
         </Reference>
     </ItemGroup>
 
